# elementos_mercados_capitais

./: .gitignore  app.py  build_portfolio.py  build_portfolio_v2.py  main.py  pyproject.toml
.streamlit/: config.toml
data/: portfolio_lock.json  portfolio_lock2.json
